--- a/popUp-demo/index.html
+++ b/popUp-demo/index.html
@@ -10,6 +10,7 @@
 	<input type="button" id="a" value="alert弹窗">
 	<input type="button" id="b" value="confirm弹窗">
 	<input type="button" id="c" value="prompt弹窗">
+	<input type="button" id="d" value="common弹窗">
 	<script type="text/javascript" src="../require.min.js" data-main="js/main"></script>
 </body>
 </html>
